<resources>
    <string name="app_name">SuperSlideGame</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="light_mode">Light Mode:</string>
    <string name="logo_image_description">Logo image</string>
    <string name="play_button_description">Play</string>
    <string name="settings_button_description">Settings</string>
    <string name="popup_win_message">Well done!</string>
    <string name="popup_lose_message">You lost!</string>
    <string name="popup_win_button">Next Level</string>
    <string name="popup_lose_button">Try Again</string>
    <string name="popup_exit">Exit</string>
    <string name="play_button_level_selector">Play!</string>
    <string name="level_selector_title">Settings for starting the game</string>
    <string name="nicknameTextViewText">Enter your nickname:</string>
    <string name="difficultyTextView">Select the game difficulty</string>
    <string name="time_up">Time\'s up!</string>
    <string name="timerTextViewText">Time left: %d seconds</string>
    <string name="log_screen_title">Log screen</string>
    <string name="log_text">LOG</string>
    <string name="email_text_view">Enter the email where to send the log:</string>
    <string name="send_email_button">Send email</string>
    <string name="new_game_button">Start a new game</string>
    <string name="exit_button">Exit the game</string>
    <string name="menu_button">Menu</string>
    <string name="next_level_button">Next Level</string>
    <string name="log_button">Send log</string>
    <string name="help_screen_title">How does the game work?</string>
    <string name="help_screen_text1">The game consists on moving a set of pieces through the game board with the objective of getting the red piece into the bottom-center of the board.</string>
    <string name="help_screen_text2">To move a game piece, all you need to do Is touch on it, and It will move to the position she\'s able to. In case, the piece can go into two different positions, firstly you need to move it into one position and then hold a long click for the piece to go into the other possible position.</string>
    <string name="go_back">GO BACK</string>
    <string name="help_screen_difficulties">There are 3 different difficulties: Easy -> 80 seconds, Hard -> 40 seconds and Extreme -> 30 seconds and a maximum of 35 moves.</string>
    <string name="help_screen_for_example">For example:</string>
    <string name="help_screen_move_explanation1">If you click you\'ll go to the position 1.</string>
    <string name="help_screen_move_explanation2">But If you wanted to go to the position 2. You need to hold click from position 1.</string>
    <string name="help_screen_desc_img1">Three cells, the two of the sides are empty and the middle one is containing a piece</string>
    <string name="help_screen_desc_img2">Three cells, the rightest two are empty and the leftest one is containing a piece</string>
    <string name="help_screen_desc_img3">Three cells, the leftest two are empty and the rightest one is containing a piece</string>

    <string name="hint_word">Game…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Game not saved because it is empty.</string>
    <string name="add_word">Add game</string>
    <string name="infinite_time">Infinite time!</string>
    <string name="details_of_the_game">Details of the game</string>
    <string name="last_games">Last games:</string>
    <string name="delete_button_desc">Button for deleting all the games</string>

</resources>