<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:background="@drawable/bckg_popup"
        app:circularflow_radiusInDP="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/popup_lose_message"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menu_button_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_button" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/log_button_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_button" />

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>